feat: Extend fixture to add /self-test and add php + python impl
With this we achieve two things:
  1. We get self-contained testing for php, node and python, intended
for cloudprober probes via SRE-1704 Cloudprober Upgrade
  2. Deployment checks in the local environment for edge + wasmer to
ensure they dont break any apps

All in all it will stress the system in multiple languages while
asserting the functionality for all is the same. Both over time to check
for things like NFS outages or overloaded servers, but also in
deployments. Win win! Cost is that it will likely cause a bit of wear
and tear
